# KarmaLego

./: .gitignore  LICENSE  README.md  RESULTS.md  main.ipynb  main.py  ml_pipeline.ipynb  pyproject.toml  pytest.ini  requirements.txt
core/: __init__.py  io.py  karmalego.py  parallel_runner.py  relation_table.py  transition_table.py  utils.py
data/: discovered_patterns.csv  inverse_symbol_map.json  patient_pattern_vectors.ALL.csv  symbol_map.json  synthetic_diabetes_temporal_data.csv
unittests/: test_discover.py  test_karmalego.py  test_parallel_runner.py  test_tirp.py  test_treenode.py
