[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karmalego"
version = "0.1.0"
description = "KarmaLego: Temporal Interval Pattern Mining"
authors = [
  { name = "Shahar Oded", email = "odedshah@post.bgu.ac.il" }
]
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "dask[dataframe]",
  "tqdm",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]